--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "tunnel": "./scripts/tunnel.sh"
   },
   "dependencies": {
-    "fastify": "^5.0.0",
     "@fastify/static": "^8.0.0",
     "@fastify/websocket": "^11.0.0",
-    "ws": "^8.18.0",
     "chokidar": "^4.0.0",
+    "fastify": "^5.0.0",
+    "node-pty": "^1.1.0",
+    "uuid": "^10.0.0",
     "web-push": "^3.6.0",
-    "uuid": "^10.0.0"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "@types/ws": "^8.5.0",
-    "@types/web-push": "^3.6.0",
     "@types/uuid": "^10.0.0",
+    "@types/web-push": "^3.6.0",
+    "@types/ws": "^8.5.0",
     "concurrently": "^9.1.0",
-    "typescript": "^5.6.0",
-    "tsx": "^4.19.0"
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.0"
   }
 }
