Setup DNS Allowlist for Docker Setup

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,11 @@ RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
     python3-venv \
+    dnsmasq \
+    inotify-tools \
+    iproute2 \
+    dnsutils \
+    jq \
     iptables \
     ca-certificates \
     curl \
@@ -25,13 +30,6 @@ RUN apt-get update && apt-get install -y \
     sudo \
     procps \
     && rm -rf /var/lib/apt/lists/*
-
-# Install mitmproxy
-RUN python3 -m venv /opt/mitmproxy-venv && \
-    /opt/mitmproxy-venv/bin/pip install mitmproxy
-
-# Add mitmproxy to PATH
-ENV PATH="/opt/mitmproxy-venv/bin:$PATH"
 
 # Install Claude CLI and GitHub Copilot CLI globally
 RUN npm install -g @anthropic-ai/claude-code @github/copilot
@@ -51,17 +49,18 @@ COPY . .
 # Build the application
 RUN npm run build
 
-# Copy proxy configuration
-COPY docker/proxy/filter.py /app/proxy/filter.py
-COPY docker/whitelist.json /app/whitelist.json
+# Copy DNS configuration and entrypoint
+COPY docker/dns/generate-dnsmasq.sh /app/dns/generate-dnsmasq.sh
+COPY docker/dns/show-blocked.sh /app/dns/show-blocked.sh
+COPY docker/allowlist.json /app/allowlist.json
 COPY docker/entrypoint.sh /app/entrypoint.sh
 
-# Make entrypoint executable
-RUN chmod +x /app/entrypoint.sh
+# Make scripts executable
+RUN chmod +x /app/entrypoint.sh /app/dns/generate-dnsmasq.sh /app/dns/show-blocked.sh
 
 # Create workspace and log directories with correct ownership
-RUN mkdir -p /workspace /var/log/proxy && \
-    chown -R agent:agent /workspace /var/log/proxy /app
+RUN mkdir -p /workspace /var/log/dns /etc/dnsmasq.d && \
+    chown -R agent:agent /workspace /var/log/dns /app
 
 # Expose RemoteAgent port
 EXPOSE 3000
