--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "3000:3000"
     volumes:
       # Workspace directory - AI can only access this folder
-      - ~/Desktop/ws/vibecoding:/workspace
+      - ~/your/projects/folder:/workspace
 
       # Allowlist configuration (hot-reload enabled)
       - ./allowlist.json:/app/allowlist.json
