--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remote-agent",
   "version": "1.0.0",
-  "description": "Web-based control panel for GitHub Copilot CLI",
+  "description": "Mobile-friendly web control panel for Claude Code and GitHub Copilot CLI",
   "main": "dist/server/index.js",
   "type": "module",
   "scripts": {
